# brl

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build-all.sh  build_wasm.sh  centos_pre_build.sh  create_ffz_tileset.py  flake.nix
.github/workflows/: ci.yaml  release.yaml
assets/: bevyrl.tiled-session  urizen_onebit_tileset__v2d0.tsx
assets/emotes/: ffz_tileset.tsx
assets/mobile_app/: phone.xcf
rogue-algebra/: Cargo.toml
rogue-algebra/src/: lib.rs  path.rs
src/: audio.rs  dev_tools.rs  main.rs
src/game/: animation.rs  assets.rs  camera.rs  chat.rs  debug.rs  delivery.rs  examine.rs  help.rs  input.rs  lighting.rs  map.rs  mapgen.rs  mobile_apps.rs  mod.rs  phone.rs  signal.rs  spawn.rs  targeting.rs  upgrades.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/screens/: game_over.rs  gameplay.rs  loading.rs  mod.rs
src/theme/: mod.rs
wasm/: index.html
