[package]
name = "rogue-algebra"
version = "0.1.0"
edition = "2021"

[features]
default = []
bevy17 = ["bevy17_math"]

[dependencies]
rand = { version = "0.9", default-features = false }
bevy17_math = { package = "bevy_math", version = "0.17.0", optional = true, default-features = false }

[dev-dependencies]
rand = { version = "0.9" }
